removing some codes

--- a/index.html
+++ b/index.html
@@ -201,26 +201,6 @@
                 <div class="col-md-4">
                 <div class="work-box">
                     <div class="work-img">
-                    <a href="https://cycleshop-website-sample.netlify.app/">
-                    <img src="img/work-2.png" alt="cycle-shop-demo" class="img-fluid">
-                    </a>
-                    </div>
-                    <div class="work-content">
-                    <div class="row">
-                        <div class="col-sm-8">
-                        <h2 class="w-title">Cycle Shop Demo</h2>
-                        <div class="w-more">
-                            </a>
-                            <span class="w-ctegory">Web Design, Front-end</span> / <span class="w-date">8 Jun 2023</span>
-                        </div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                </div>
-                <div class="col-md-4">
-                <div class="work-box">
-                    <div class="work-img">
                     <a href="https://github.com/kenshisanada/coffeeshop-react">
                     <img src="img/work-3.png" alt="coffee-shop-demo" class="img-fluid">
                     </a>
@@ -246,7 +226,7 @@
                     <div class="work-content">
                     <div class="row">
                         <div class="col-sm-8">
-                        <h2 class="w-title">Bike Shop Demo</h2>
+                        <h2 class="w-title">Ebike Shop Demo</h2>
                             <div class="w-more">
                                 <span class="w-ctegory">Front-end, ReactJS</span> / <span class="w-date">15 Jun 2023</span>
                             </div>
