modified description in layanan

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="service-content">
                     <h2 class="s-title">Web Design</h2>
                     <p class="s-description text-center">
-                        Jasa desain website dengan estetika sesuai dengan kebutuhan bisnis dan keinginan anda, harga mulai dari Rp500.000.
+                        Jasa desain UI / UX dengan estetika sesuai dengan kebutuhan bisnis dan keinginan anda, harga mulai dari Rp500.000.
                     </p>
                     </div>
                 </div>
@@ -144,7 +144,11 @@
                     <div class="service-content">
                     <h2 class="s-title">Web Development</h2>
                     <p class="s-description text-center">
-                        Jasa pengembangan website full-stack menggunakan HTML, CSS, ReactJS, dan Django sesuai kebutuhan bisnis anda, harga mulai dari Rp1.000.000.  
+                        Jasa pengembangan website full-stack<br> 
+                        Front-end: HTML Bootstrap, CSS, ReactJS.<br> 
+                        Back-end: Django, NodeJS Express.<br>
+                        Database: MongoDB. <br>
+                        Harga mulai dari Rp1.000.000.  
                     </p>
                     </div>
                 </div>
