--- a/index.html
+++ b/index.html
@@ -249,6 +249,33 @@
                     </div>
                 </div>
                 </div>
+                <div class="col-md-4">
+                <div class="work-box">
+                    <div class="work-img">
+                        <img src="img/work-5.png" alt="bike-shop-demo" class="img-fluid">
+                    </div>
+                    <div class="work-content">
+                        <div class="row">
+                            <div class="col-sm-8">
+                            <h2 class="w-title">Hotel & Resort Demo</h2>
+                                <div class="w-more">
+                                    <span class="w-ctegory">Front-end, Web Design</span> / <span class="w-date">15 Jun 2023</span>
+                                </div>
+                                <button style="background:transparent;">
+                                    <a href="https://hotelresort-bootstrap.netlify.app">
+                                    Netlify Demo
+                                    </a>
+                                </button>
+                                <button style="background:transparent;">
+                                    <a href="https://github.com/kenshisanada/hotelresort-bootstrap">
+                                    Github
+                                    </a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>    
             </div>
             </div>
         </section>
